Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17709

JOM can not be built with MinGW

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 4.3.0-beta1
    • Qt Creator 2.4.0
    • Jom
    • None
    • d6b3e868aa345f360b29ebddd5300dce5f8d64ec

      Main problem in src/jomlib/process.h header file.
      The name of the header file process.h includes global intersects with the same name file in MinGW.

        For Gerrit Dashboard: QTCREATORBUG-17709
        # Subject Branch Project Status CR V

            kot Konstantin Podsvirov
            kot Konstantin Podsvirov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes