Fix MinGW based build

Changes:
- fix src/jomlib/jobserver.cpp for 64bit build;
- rename files src/jomlib/processXXX -> src/jomlib/jomprocessXXX;
- fix CMake and QMake projects to build with MinGW.

Task-number: QTCREATORBUG-17709
Change-Id: Ib88659f991cec3b50d29e0035aba6fe383c5e21a
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>